@@ -2,8 +2,9 @@
 
 = 1.25.3 - 2020-**-** =
 * Add   - Initial code for WooCommerce.com subscriptions API.
-* Fix   - UI fix for input validation for package dimensions and weights.
 * Add   - Dynamic carrier registration form.
+* Add   - DHL Schedule Pickup link within order notes.
+* Fix   - UI fix for input validation for package dimensions and weights.
 * Fix   - Correct validation for UPS fields in Carrier Account connect form.
 
 = 1.25.2 - 2020-11-10 =
